--- a/www/cordova-app-loader/update.css
+++ b/www/cordova-app-loader/update.css
@@ -15,7 +15,7 @@ html, body {
     text-align: center;
 }
 
-#error {
+#error, #progress {
     display: none;
 }
 
@@ -30,3 +30,4 @@ button {
     font-size: 16px;
     outline: none;
 }
+
